Archive2/88/07276befbc0cef/output
main.cpp: In function 'int main()':
main.cpp:10:7: error: invalid use of incomplete type 'struct print_type<void()>'
     >{};
       ^
main.cpp:4:8: error: declaration of 'struct print_type<void()>'
 struct print_type;
        ^
