Archive2/88/07276befbc0cef/main.cpp
void f();

template<typename T>
struct print_type;

int main()
{
    print_type<
      decltype(f)
    >{};
}